  EntityLookupField now uses Entity.compareTo() for lexical ordering of selection list
  Entity.setDefaultProxy() not used in demos, problematic during tests for example, when one proxy overrides another
  EntityEditPanel.setDefaultFocus() now requests focus for the base panel in case no default focus component is set
  MethodLogger.getLogEntries() does not fail when logging is not enabled
  EntityEditModel.validate() removed value parameter
  DefaultExceptionHandler.unwrapRuntimeException() now works properly
  DefaultExceptionHandler.unwrapRuntimeException() bug fixed
  EntityTableModel.getFetchCount() added
  EntityTableCellRenderer.DateRenderer(DateFormat) added
  EntityTableCellRenderer.TimestampRenderer(DateFormat) added
  EntityTableCellRenderer.createRenderer(Property) added
  EntityTableModel.tableColumnProperties replaced by TableColumnModel
  EntityTableSearchModel.tableColumnProperties replaced by TableColumnModel
  EntityTableSearchPanel.tableColumnProperties removed
  Property.searchable added
  EntityTableModel.convertColumnIndexToView() added, basically copied from JTable
  EntityTableModel now handles dynamic column positioning
  EntityTableCellRenderer.getRenderer() now takes Property as parameter instead of column index
  EntityTablePanel show/hide table column functionality improved
  EntityTableSummaryPanel added
  EntityTablePanel.summaryPanel added
  EntityTablePanel table popup menu now added to the JTable parent as well, works for empty tables with no columns showing
  EntityTablePanel column reording allowed
  UiUtil.bindColumnAndPanelSizes() now takes column movement in account
  EntityTableModel.getTableColumn(Property) added
  EntityTableModel.getColumnClass() and getValueAt() both use convertColumnIndexToView
  EntityTableSearchPanel now handles column movement
  Configuration.ALLOW_COLUMN_REORDERING added
  EntityTablePanel.allowColumnReordering() added, returns the above value by default, used in initializeJTable()